# pyproject.toml  — import now works     <== bump version every rebuild
[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bridge-python-sdk"
version = "1.0.0"                           # ← increment so pip upgrades
description = "Bridge Python SDK for Looking Glass Factory"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "Alec Zinsli (Looking Glass Factory)", email = "alec.zinsli@lookingglassfactory.com"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux"
]
keywords = ["looking-glass", "graphics", "sdk"]

dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/your-org/bridge-python-sdk"
Issues   = "https://github.com/your-org/bridge-python-sdk/issues"

[tool.setuptools]
package-dir = {"" = "src"}                  # src-layout, root is src/

[tool.setuptools.packages.find]
where   = ["src"]                           # scan src/
include = ["bridge_python_sdk*"]            # pick up renamed dir + subpkgs

[tool.setuptools.package-data]
bridge_python_sdk = [
    "bin/win/*.dll",
    "bin/mac-m1/*.dylib",
    "bin/mac-x64/*.dylib",
    "bin/ubuntu/*.so"
]

[tool.setuptools.exclude-package-data]
bridge_python_sdk = ["*.pdb"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# ---------- optional CI wheel automation ----------
[tool.cibuildwheel]
skip  = ["pp*", "cp27*", "cp35*"]
archs = ["auto"]

[tool.cibuildwheel.macos]
archs                = ["x86_64", "arm64"]   # or "universal2"
repair-wheel-command = "delocate-wheel {wheel} -w {dest_dir}"

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "quay.io/pypa/manylinux2014_x86_64"
repair-wheel-command   = "auditwheel repair -w {dest_dir} {wheel}"
